--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -28,21 +28,20 @@
 
 .card--img {
 	height: 100%;
-	/* width: 20vw; */
 	width: 20em;
 	aspect-ratio: 16 / 9;
 	object-fit: cover;
 	border-radius: 0.3em;
 	transform: scale(1);
-	transition: all 650ms ease-in-out;
+	transition: all 350ms ease-in-out;
 }
 
 .card--img:hover {
 	transform: scale(1.05);
+	cursor: pointer;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11),
 		0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11), 0 16px 16px rgba(0, 0, 0, 0.11),
 		0 32px 32px rgba(0, 0, 0, 0.11);
-	/* filter: brightness(80%); */
 }
 
 .card--infos {
@@ -72,6 +71,7 @@
 	font-size: 2rem;
 	margin: 0.25em 0;
 	font-weight: 700;
+	padding-bottom: 1rem;
 }
 
 .card--date {
@@ -80,7 +80,7 @@
 
 .card--description {
 	max-width: 50rem;
-	margin-top: 2em;
+	margin-top: 0.75em;
 	font-weight: 400;
 	font-size: 0.75rem;
 	line-height: 150%;
