--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,7 +8,7 @@
 
 .cards-list > .card + .card {
 	padding: 2em 0;
-	border-top: 1px solid var(--clr-text-light);
+	border-top: 1px solid var(--clr-line);
 }
 
 .cards-list .card:first-child {
@@ -28,8 +28,7 @@
 
 .card--img {
 	height: 100%;
-	width: 20em;
-	aspect-ratio: 16 / 9;
+	width: 8em;
 	object-fit: cover;
 	border-radius: 0.3em;
 	transform: scale(1);
